--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -961,8 +961,8 @@ params = params − learning_rate ∗ params_grad
 <p style="text-align: center;">程式1. Batch gradient descrnt <sub><span>(</span><a href="https://ruder.io/optimizing-gradient-descent/">程式來源</a><span>)</span></sub></p>
 <p>預定義每次 epoch，先計算 loss function 梯度向量對於整個資料集參數向量。如果梯度值來自於先前計算出的梯度值，就會檢查梯度，並以梯度相反的方向更新參數 <span>θ</span>，學習率 <span>η </span>決定多大的更新量。Batch gradient descent 對於凸面誤差可以保證收斂到廣域最小值，對於非面凸誤差可以收斂到局部最小值。</p>
 <h4>Stochastic gradient descent</h4>
-<p>Stochastic gradient descent(SGD) 隨機梯度下降法，這裡的目標函數為 J<span>(θ, x</span><sup><sub>i</sub></sup><span>, y</span><sup><sub>i</sub></sup><span>)</span>(變數 θ 為 w(weight) 和 b(bias) 的函數，也可以寫成 J(w, b, x<sup>i</sup>, y<sup>i</sup>))。</p>
-<p style="text-align: center;">θ = θ − η · ▽θJ(θ, x<sup><sub>i</sub></sup>, y<sup><span>i</span></sup>)</p>
+<p>Stochastic gradient descent(SGD) 隨機梯度下降法，這裡的目標函數為 J<span>(θ, x</span><sup><span>i</span></sup><span>, y</span><sup><span>i</span></sup><span>)</span>(變數 θ 為 w(weight) 和 b(bias) 的函數，也可以寫成 J<span>(w, b, x</span><sup><span>i</span></sup><span>, y</span><sup><span>i</span></sup><span>)</span>)。</p>
+<p style="text-align: center;">θ = θ − η · ▽θJ(θ, x<sup><span>i</span></sup>, y<sup><span>i</span></sup>)</p>
 <p>批量梯度下降他會在每個參數更新前重新計算相似梯度。SGD 每次次執行會更新來消除多餘 (誤差)，因此通常速度 很快。SGD 頻繁更新並變化很大，因為目標方程式波動很大 [圖1]。</p>
 <p style="text-align: center;"><img alt="" height="300" src="/images/sgd_fluctuation.png" width="382"/></p>
 <p style="text-align: center;">圖1.SGD fluctuation <sub>(<a href="https://ruder.io/optimizing-gradient-descent/">圖片來源</a>)</sub></p>
@@ -975,8 +975,8 @@ params = params − learning_rate ∗ params_grad</pre>
 <p style="text-align: center;"><span>程式2. Stochastic gradient descrnt <sub>(<a href="https://ruder.io/optimizing-gradient-descent/">程式來源</a><span>)</span></sub></span></p>
 <h4>Mini-batch gradient descent</h4>
 <p>Mini-batch gradient descent(小批量梯度下降) 各取前兩者的優點，將資料集分割成小區塊，每個小區塊大小稱作 batch size，每次跑完 batch size 算迭代 (iteration)一次，算完一次資料集即完成一次 epoch。舉例: 資料集大小為 1000，若 batch size 為 50，iteration 為 datasets 的 batch_size = 1000÷50 = 20，當 iteration 跑完 20 次算完成一次 epoch。</p>
-<p>這方式可以減少參數更新的方差，並且可以穩定收斂；可利用深度學習庫所共有的高度優化的矩陣優化，從而由一個小批量計算出梯度非常有效。通常 batch sizes 的範圍介於 50 ~256，會因為應用而有所差異。訓練神經網絡時，通常選擇 Mini-batch gradient descent 算法，而當使用這算法時，通常也使用術語 SGD。</p>
-<p>θ = θ − η · ▽θJ(θ,x<sup><sub>(i:i+n)</sub></sup>,y<sup><sub>(i:i+n)</sub></sup>)</p>
+<p>這方式可以減少參數更新的方差，並且可以穩定收斂；可利用深度學習庫所共有的高度優化的矩陣優化，從而由一個小批量計算出梯度非常有效。通常 batch sizes 的範圍介於 50 ~256，會因為應用而有所差異。訓練神經網絡時，通常選擇 Mini-batch gradient descent 算法，而當使用這算法時，通常也用 SGD 稱呼。</p>
+<p>θ = θ − η·▽θJ(θ, x<sup><sub>( i : i + n)</sub></sup>, y<sup><sub>( i : i + n)</sub></sup>)</p>
 <p>下面程式碼 [程式.3] 為迭代範例，batch size 大小為 50：</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(nb_epochs ) :
 np.random.shuffle(data)
@@ -992,7 +992,89 @@ params = params − learning_rate ∗ params_grad
 <li> 學習率清單嘗試在訓練的時候調整學習率，即根據預定義清單或當目標下降於閾值 (threshold) 時降低學習率。 但清單和閾值須預先定義，因此無法適應數據集的特徵。</li>
 <li> 另外相同學習率適用全部參數更新。如果資料稀疏而且外型有很特別的頻率，我們可能不希望將所有特徵更新 到相同的程度，而是對很少發生的特徵執行較大的更新。</li>
 <li> 最小化神經網路常見的高度非凸面誤差方程式 (error function) 的另一關鍵挑戰則是要避免被困在大量次優的局 部最小值區域中。認為困難實際上不是由局部最小值引起的，而是由鞍點引起的，即一維向上傾斜而另一維向下 傾斜的點。這些鞍點通常被相同誤差的平穩段包圍，這使得 SGD 很難逃脫，因為在所有維度上梯度都接近於零。</li>
-</ol><h1>Ref</h1>
+</ol><h2>Gradient descent optimization algorithms</h2>
+<p><span>(</span><a href="https://ruder.io/optimizing-gradient-descent/">資料來源</a><span>)</span></p>
+<h4>Momentum</h4>
+<p>SGD 難以在陡峭的往正確的方向，那就是說在一個維度上，曲面的彎曲比另一個維度要陡得多，這在局部最優情況下很常見。下圖[圖.1]的同心圓代表中心下凹的曲面。在這些情況下，SGD 會在陡峭的地方振盪，而僅沿著底部朝著局部最優方向猶豫前進，如 [圖.1.a] 所 示。 Momentun(動量) 是一個幫助加速 SGD 在正確方向和抑制震盪的方法，在 [圖.1.b]。</p>
+<table style="width: 250.667px; margin-left: auto; margin-right: auto;">
+<tbody>
+<tr>
+<td style="width: 236px;"><img alt="without_momentum" caption="false" height="100" src="/images/without_momentum.png" width="236"/></td>
+<td style="width: 10px;"><img alt="with_momentum" caption="false" height="100" src="/images/with_momentum.png" width="236"/></td>
+</tr>
+<tr>
+<td style="width: 236px; text-align: center;"><span> 圖.1.</span>a SGD without momentum <sub><span>(</span><a href="https://ruder.io/optimizing-gradient-descent/">圖片來源</a><span>)</span></sub></td>
+<td style="width: 10px; text-align: center;"><span>圖.1.</span>b SGD with momentum <sub>(<a href="https://ruder.io/optimizing-gradient-descent/">圖片來源</a>)</sub></td>
+</tr>
+</tbody>
+</table>
+<p style="text-align: left;">這麼做會增加一個係數 γ (gamma) 來更新上次的向量到正確向量 (修正偏差)，γ 通常設為 0.9 左右。</p>
+<p style="text-align: center;">v<sub>t</sub> = γv<sub>t−1</sub> + η·▽θJ(θ) θ = θ − v<sub>t</sub></p>
+<p style="text-align: left;">實際上，使用動量的時候，就像將球推下山坡。球在下坡時滾動時會累積動量，在途中速度會越來越快（如果存在空氣阻力，直到達到極限速度，也就是 γ &lt; 1) 參數更新也發生了同樣的事情：動量 (momentum) 對於梯度指向相同方向的維度增加，而對於梯度改變方向的維減少動量。結果，我們獲得了更快的收斂並減少了振盪。</p>
+<h4 style="text-align: left;">Nesterov accelerated gradient</h4>
+<p>Nesterov accelerated gradient（NAG）是一種使動量具有一個去向的概念，以便在山坡再次變高之前知道它會減速。我們知道使用動量 γv<sub>t−1</sub> 來移動參數。計算 θ − γv<sub>t−1</sub> 這樣就給了參數的下一個位置的近似值（完整更新缺少的梯度），這是參數將要存在的大致概念。現在，通過計算與當前參數無關的梯度來有效地看到目前的參數 θ 將會移動到的位置：</p>
+<p style="text-align: center;"><span>v</span><sub>t</sub> = γvt−1 + η·▽θJ(θ−γvt−1)</p>
+<p style="text-align: center;">θ = θ − v<sub>t</sub></p>
+<p style="text-align: center;"><sub><img alt="" height="100" src="/images/NAG.jpg" width="345"/></sub></p>
+<p style="text-align: center;">圖.2 NAG <sub>(<a href="http://www.cs.toronto.edu/~tijmen/csc321/slides/lecture_slides_lec6.pdf">圖片來源</a>)</sub></p>
+<p>同樣，我們設置動量 γ 約為 0.9。動量首先計算當前梯度（[圖.2] 中的藍色小向量），然後在更新的累積梯度（藍 色向量）的方向上發生較大的跳躍，而 NAG 首先在先前的累積梯度的方向上進行較大的跳躍（棕色向量），測量梯度， 然後進行校正（紅色向量），從而完成 NAG 更新（綠色向量）。這種預期的更新可防止我們過快地進行，並導致響應 速度增加，從而顯著提高了 RNN 在許多任務上的性能。有關 NAG 背後另一解釋，請<a href="https://cs231n.github.io/neural-networks-3/">參見此處</a>，而 Ilya Sutskever 在其博士論文中給出了更詳細的概述。</p>
+<h4>Adagrad</h4>
+<p>Adagrad 是一個梯度優化的算法，它可以做到：學習率適應參數，對於頻繁出現的特徵相關參數執行較小的更新 (較低的學習率)，以及對不經常出現的特徵相關參數進行較大更新（即學習率較高）。Adagrad 可以提高 SGD 的強度， 用於訓練大型神經網絡。</p>
+<p>先前，在同一次 θ 參數 (更新後就算另一次)，每個 θ 都使用相同的 η(學習率)。Adagrad 則是對每個 θ 參數使用 不同的 η，t 代表 time step。先將 Adagrad 的更新參數向量化。用 g<sub>t</sub> 表示 time step 的梯度，g<sub>t,i</sub> 表示目標函數 (參數 θ 在 time step t) 對參數做偏微分計算。</p>
+<p style="text-align: center;">g<sub>t,i</sub> = ▽θJ(θ<sub>t,i </sub>)</p>
+<p>當 SGD 更新每個參數 θ<sub>i</sub>，在每個 time step t，因此變成：</p>
+<p style="text-align: center;">θ<sub>t+1,i</sub> = θ<sub>t,i</sub> − η · g<sub>t,i </sub></p>
+<p>更新規則，Adagrad 根據先前 θ<sub>i</sub> 計算的梯度，對每個參數 θ<sub>i</sub> 修改整個學習率 η 在每個 time stept：</p>
+<p style="text-align: center;">θ<sub>t+1,i</sub> = θ<sub>t,i</sub> − [η / (G<sub>t,ii</sub> + ϵ)<sup>½</sup>]</p>
+<p>G<sub>t</sub> ∈ R<sup>d×d</sup> 這是一個對角矩陣每個對角元素 i，i 是關於 θ 梯度平方和取決於 time stept，ϵ 是避免分母為 0(ϵ 通常 為 10<sup>−8</sup> )，如果沒有平方根運算，該算法的性能將大大降低。 G<sub>t</sub> 包含了過去梯度平方根，由於全部 θ 參數沿著對角線，通過向量的內積計算 G<sub>t</sub> 和 g<sub>t</sub>：</p>
+<p style="text-align: center;">θ<sub>t+1</sub> = θ<sub>t</sub> −<span> [η / (G</span><sub>t </sub><span>+ ϵ)</span><sup>½</sup><span>]</span>·g<sub>t </sub></p>
+<p>Adagrad 主要好處之一是，無需手動調整學習率。大多數實現使用預設值 0.01 並將其保留為預設值。Adagrad 主 要弱點是會累積分母的平方梯度：由於每項都是正的，累積和會在訓練中不斷增長。反過來，學習率下降，並最終變 得無限小，這算法就不再獲得知識。</p>
+<h4><span>Adadelta</span></h4>
+<p>Adadelta 是 Adagrad 的延伸，下降其激進的程度，單調的降低學習率。Adadelta 會限制過去累積的梯度，並將其 限制在某個特定大小 w，並代替 Adagrad 過去累積的梯度平方，以梯度總和是遞迴定義為所有過去衰減梯度平方平均值。流動平均 E[g<sup><sub>2</sub></sup>]<sub>t</sub> 在 time step t 然後取決於 (像 Momentum 的 γ) 先前 平均和最近梯度：</p>
+<p style="text-align: center;"><span>E[g</span><sup><sub>2</sub></sup><span>]</span><sub>t</sub> = γ<span>E[g</span><sup><sub>2</sub></sup><span>]</span><sub>t</sub><sub>-1</sub> + (1 − γ)g<sup>2</sup><sub>t</sub></p>
+<p>γ 值和 Momentum 的相似，約為 0.9，現在根據參數更新向量 △θt 來重寫 SGD：</p>
+<p style="text-align: center;">△θ<sub>t</sub> = −η · g<sub>t,i</sub></p>
+<p style="text-align: center;">θ<sub>t+1</sub> = θ<sub>t</sub> + △θ<sub>t</sub></p>
+<p>Adagrad 的參數更新向量替換成：對角矩陣 G<sub>t</sub> 過去梯度平方的衰退平均 <span>E[g</span><sup><sub>2</sub></sup><span>]</span><sub>t</sub></p>
+<p style="text-align: center;"><span>△θ</span><sub>t</sub> = − <span>[η / (G</span><sub>t </sub><span>+ ϵ)</span><sup>½</sup><span>]</span><span>·g</span><sub>t</sub></p>
+<p style="text-align: center;">replace <span>G</span><sub>t</sub><span><span> </span></span>with <span><span> </span>E[g</span><sup><sub>2</sub></sup><span>]</span><sub>t</sub><span><span> </span></span> ⇒ △<span>θ</span><sub>t</sub> = <span>−</span><span><span> </span></span><span>[η / (E[g<sup><sub>2</sub></sup><span>]</span><sub>t </sub></span><span>+ ϵ)</span><sup>½</sup><span>]</span><span>·g</span><sub>t</sub></p>
+<p>由於分母只是梯度的均方根 (RMS)，我們可以取代成縮寫：</p>
+<p style="text-align: center;"><span>△θ</span><sub>t</sub> = − η RMS[g]<sub>t</sub> · <span>g</span><sub>t</sub></p>
+<p>這個更新單位和 SGD、Momentum 以及 Adagrad 的單位不符合，因此更新需有相同的參數。為了實現這一點，首先定義另一個指數衰減平均值，這次不是梯度平方更新而是參數平方更新：</p>
+<p style="text-align: center;">E[<span>△θ<sup>2</sup></span>]<sub>t</sub> = γE[△θ<sup>2</sup>]<sub>t−1</sub> + (1 − γ) △ θ<sup>2</sup><sub>t</sub></p>
+<p>RMS 參數更新:</p>
+<p style="text-align: center;">RMS[△θ<span>]</span><sub>t</sub> = (E<span>[△θ</span><sup>2</sup><span>]</span><sub>t</sub> + ϵ<span>)</span><sup>½</sup></p>
+<p>RMS[△θ<span>]</span><sub>t</sub> 是未知的，更新參數的 RMS 取近似直到上個 time step。用 RMS<span>[△θ</span><span>]</span><sub>t-1</sub> 取代學習率 η，最後產生新 的規則：</p>
+<p style="text-align: center;"><span>△</span><span>θ</span><sub>t</sub> = − (RMS[△θ<span>]</span><sub>t-1</sub> / RMS[g<span>]</span><sub>t</sub> )<span>·g</span><sub>t</sub></p>
+<p style="text-align: center;"><span>θ</span><sub>t-1</sub>= θ<sub>t</sub> + △<span>θ</span><sub>t</sub></p>
+<p>使用 Adadelta，甚至不需要設定預設學習率，因為它已從更新規則淘汰。</p>
+<h4>RMSprop</h4>
+<p>RMSprop 是 Geoffrey Hinton 在他的課程中提出的未公開自適應學習率的方法。</p>
+<p>RMSprop 和 Adadelta 都是為了解決 Adagrad 的學習率急劇下降的問題個別獨立開發出來的解決方式。RMSprop 實際上與 Adadelta 得出的第一個更新向量相同：</p>
+<p><span>E[g</span><sup><sub>2</sub></sup><span>]</span><sub>t </sub>= 0.9<span>E[g</span><sup><sub>2</sub></sup><span>]</span><sub>t </sub> + 0.1<span>g</span><sup>2</sup><sub>t</sub></p>
+<p><span>θ</span><sub>t+1 </sub>= <span>θ</span><sub>t</sub> <span>−</span><span><span> </span></span><span>[η / (E[g<sup><sub>2</sub></sup><span>]</span><sub>t </sub></span><span>+ ϵ)</span><sup>½</sup><span>]</span><span>·g</span><sub>t</sub></p>
+<p>RMSprop 也將學習率除以梯度平方的指數衰減平均值。Hinton 建議 γ 設為 0.9，好的預設學習率 η 數值為 0.001。</p>
+<h4>Adam</h4>
+<p>Adaptive Moment Estimation 自適應矩評估 (Adam) 是另一種計算每個評估學習率的方法。出了儲存過去梯度平 方的指數衰減平均值 <span>v</span><sub>t</sub>，就像 Adadelta 和 RMSprop 一樣，Adam 還保留過去梯度的指數衰減平均值 <span>m</span><sub>t</sub>，類似動量 (Momentum)。如果 Momentum 被視為順著斜坡下滑的球，而 Adam 則是像一個帶有摩擦的沉重的球，因此更適合 待在 error face 平坦的最小值區域。計算過去梯度平方的衰減平均值 <span>m</span><sub>t</sub> 和 <span>v</span><sub>t</sub> 分別如下：</p>
+<p style="text-align: center;">m<sub>t</sub> = <span>β</span><sub>1</sub><span>m</span><sub>t-1</sub> + (1 − <span>β</span><sub>1</sub>)<span>·g</span><sub>t</sub></p>
+<p style="text-align: center;"><span>v</span><sub>t</sub> = <span>β</span><sub>2</sub><span>v</span><sub>t-1</sub> + (1 − <span>β</span><sub>2</sub>)<span>g</span><sup>2</sup><sub>t</sub></p>
+<p><span>m</span><sub>t</sub> 和 <span>v</span><sub>t</sub> 分別是第一階矩平均估計值和第二階矩無中心方差估計值，因此是方法的名稱。像 <span>m</span><sub>t</sub> 和 <span>v</span><sub>t </sub>被初始化為向量 o，Adam 的作者觀察到它們偏向零，特別是在初始 time step，尤其是在衰減率較小的時候 (也就是說 <span>β</span><sub>1</sub><span><span> </span></span>和 <span>β</span><sub>2</sub><span><span> </span></span>趨近於 1) 藉由計算校正偏差第一矩 <em class="ph i">m̂</em><sub>t </sub>和第二矩 <em class="ph i">v̂<sub>t </sub></em>抵消偏差：</p>
+<p style="text-align: center;"><em class="ph i">m̂</em><sub>t</sub> = <span>m</span><sub>t</sub><span><span> </span></span>/(1 − <span>β<sup>t</sup></span><sub>1</sub>)</p>
+<p style="text-align: center;"><em class="ph i">v̂<sub>t</sub></em> = <span>v</span><sub>t</sub><span><span> </span></span>/(1 − <span>β<sup>t</sup></span><sub>2</sub>)</p>
+<p>使用他們去更新參數，就像 Adadelta 和 RMSprop 中所看到的那樣，這將產生 Adam 更新規則：</p>
+<p style="text-align: center;"><span>θ</span><sub>t+1</sub> = <span>θ</span><sub>t</sub> − [η (<em class="ph i">v̂<sub>t </sub></em><span><span><span>)</span><sup>½ </sup></span></span>+ ϵ] <em class="ph i">m̂</em><span></span><sub>t</sub><span><span> </span></span></p>
+<p>β<sub>1</sub> 預設值建議為 0.9，β<sub>2</sub> 預設值建議為 0.999，ϵ 預設值建議為 <span>10</span><sup>−8</sup>。根據經驗證明 Adam 表現良好，並且與其 他自適應學習算法相比具有優勢。</p>
+<h4>AdaMax</h4>
+<p>在 Adam 更新規則中的 <span>v</span><sub>t</sub> 係數是與梯度成反比地縮放過去梯度的範數 (通過 <span>v</span><sub>t-1</sub> 項) 和當前梯度 <span>|</span><span>g</span><sub>t</sub><span>|</span><sup>2 </sup>：</p>
+<p><span>v</span><sub>t</sub><span><span> </span></span>= <span>β</span><sub>2</sub><span>v</span><sub>t-1</sub> + (1 − <span>β</span><sub>2</sub>)|<span>g</span><sub>t</sub>|<sup>2 </sup></p>
+<p>我們轉換這個更新到 ℓp。注意 <span>β</span><sub>2</sub> 參數化為 <span>β<sup>p</sup></span><sub>2</sub>：</p>
+<p><span>v</span><sub>t</sub><span><span> </span></span>= <span>β<sup>p</sup></span><sub>2</sub><span>v</span><sub>t-1</sub> + (1 − <span>β<sup>p</sup></span><sub>2</sub>)<span>|</span><span>g</span><sub>t</sub><span>|</span><sup>p</sup></p>
+<p>大規範 p 值使數值上變得不穩定，這就是為什麼 ℓ1 和 ℓ2 規範在實踐中是最常見的。然而，ℓ∞ 通常也表現出穩定 的行為。作者 (Kingma and Ba, 2015) 提出了 AdaMax 並證明了和 ℓ∞ 收斂到更穩定的值。為了避免與 Adam 混用， 所以使用 u<sub>t</sub><span><span> </span></span>來表示無窮範數約束 <span>v</span><sub>t</sub><span><span> </span></span>：</p>
+<p><span>u</span><sub>t</sub> = <span>β<sup>∞</sup></span><sub>2</sub><span>v</span><sub>t-1</sub> + (1 − <span>β<sup>∞</sup></span><sub>2</sub>)|<span>g</span><sub>t</sub>|<sup>∞</sup> </p>
+<p>= max(<span>β</span><sub>2</sub><span> </span> · <span>v</span><sub>t-1</sub>, |gt|)</p>
+<p>替換為 Adam 更新公式 <span>(</span><em class="ph i">v̂<sub>t </sub></em><span><span><span>)</span><sup>½ </sup></span></span><span>+ ϵ </span>和 <span>u</span><sub>t</sub> 得出 AdaMax 更新規則：</p>
+<p><span>θ</span><sub>t+1</sub> = <span>θ</span><sub>t</sub> − η <span>u</span><sub>t</sub> <em class="ph i">m̂</em><sub>t</sub><span><span> </span></span></p>
+<p>注意 ut 依靠最大運算，不建議 Adam 中的 <span>m</span><sub>t</sub><span><span> </span></span>和 <span>v</span><sub>t</sub><span><span> </span></span>偏向零，這就是為什麼不需要針對 <span>u</span><sub>t</sub> 計算偏差。好的預設值 η = 0.002，<span>β</span><sub>1 </sub>= 0.9 和 <span>β</span><sub>2</sub> = 0.999。</p><h1>Ref</h1>
 <h2>Flutter</h2>
 <p>Flutter 與 Android sdk 版本差異問題解決: <a href="https://stackoverflow.com/questions/60440509/android-command-line-tools-sdkmanager-always-shows-warning-could-not-create-se/61613986#61613986">https://stackoverflow.com/questions/60440509/android-command-line-tools-sdkmanager-always-shows-warning-could-not-create-se/61613986#61613986</a></p>
 <p>Flask 與 ML 系統在後端, Flutter 作為前端</p>
